# PythonCourse

Chapter_2/Lesson7/DZ_7/: functions.py
Chapter_2/Lesson8/DZ_8/: main.py
Chapter_3/Lessons10/: DZ_10.1.docx
Chapter_3/Lessons12/12.2/: DZ_12.2.docx
Chapter_4/Lessons 16/Lesson16_1/: Error.py  Full_forms.py
Chapter_4/Lessons13/13_2/: .gitignore
Chapter_4/Lessons13/13_3/: pyproject.toml
Chapter_4/Lessons13/13_3/src/: Product_class.py  file_fruits.json  main.py
Chapter_4/Lessons13/13_3/tests/: test_Product_class.py  test_utils.py
Chapter_4/Lessons14/14_2/: pyproject.toml
Chapter_4/oop_practics/lesson1/: Person.py  Rectangle.py  number.py  students.py
Chapter_6/: stepik.py
Chapter_6/CW_Chapter6/: data.json  requirements.txt
Chapter_6/HW_Chapter6/: README.md  catalog_data.json  category.json  grups.json  product.json  requirements.txt
Chapter_6/Lessons21/: README.md  requirements.txt
Chapter_7/CW_Chapter7/: README.md  requirements.txt
Chapter_7/HW_Chapter7/: .env.sample  README.md  docker-compose.yaml  requirements.txt
Chapter_7/Project7_DRF/: .env.sample  README.md  celerybeat-schedule.bak  docker-compose.yaml  requirements.txt
CourseWork2/: BasicWord.py  Player.py  main.py  utils.py
DZ_6/: appDZ6.py  functions.py  history.txt  main DZ6.py
Lesson7/DZ_7/: check_fitness.py  functions.py  main.py  suitability.py
Lesson8/DZ_8/: Class_Questions.py  Classes.py  functions.py  main.py
Lessons10/: DZ_10.2.docx
Lessons11/: DZ_11.1.docx  DZ_11.2.docx
Lessons12/: DZ_12.1.docx
Lessons12/CourseWork/: Course_work_3.docx
(+323 files in other folders)
